Bug #46042: backported the fix for the valgrind warning from 5.1